--- a/fb-ui/src/Css/postMessage.css
+++ b/fb-ui/src/Css/postMessage.css
@@ -3,6 +3,8 @@
     margin-top: 5em;
     background-color: white;
     border: 1px solid wheat;
+    width: 700px;
+    margin-left: 20em;
 }
 
 .postMessage .messageHeader{
